deploy: 87230053db3defadee750417103e344851b3de07

--- a/getting_started/what_is_in_the_package.html
+++ b/getting_started/what_is_in_the_package.html
@@ -155,7 +155,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="contents-of-the-binary-distribution"><a class="header" href="#contents-of-the-binary-distribution">Contents of the binary distribution</a></h1>
-<p>For those who use the binary distribution, i.e. downloaded a prebuilt packageo of the engine, this page describes that contents of that package.</p>
+<p>For those who use the binary distribution, i.e. downloaded a prebuilt package of the engine, this page describes that contents of that package.</p>
 <table><thead><tr><th>Folder</th><th>Content</th></tr></thead><tbody>
 <tr><td><strong>headers/</strong><br></td><td></td></tr>
 <tr><td><strong>lib/</strong><br></td><td></td></tr>
