--- a/print.html
+++ b/print.html
@@ -511,7 +511,7 @@ tracker</a> or ping us on <a href="https://discord.gg/uJtkbVr">Discord</a> and w
 <p>GitHub invites frequently end up in the Spam folder. Check there or go to the <a href="https://github.com/ourmachinery/themachinery">repository</a> to see your invite.</p>
 <p>If you still have problems despite this, then contact us on ping@ourmachinery.com.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="contents-of-the-binary-distribution"><a class="header" href="#contents-of-the-binary-distribution">Contents of the binary distribution</a></h1>
-<p>For those who use the binary distribution, i.e. downloaded a prebuilt packageo of the engine, this page describes that contents of that package.</p>
+<p>For those who use the binary distribution, i.e. downloaded a prebuilt package of the engine, this page describes that contents of that package.</p>
 <table><thead><tr><th>Folder</th><th>Content</th></tr></thead><tbody>
 <tr><td><strong>headers/</strong><br></td><td></td></tr>
 <tr><td><strong>lib/</strong><br></td><td></td></tr>
